[tool.poetry]
name = "automation-py"
version = "0.1.0"
description = ""
authors = ["ESnark <settimeout1000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"
webdriver-manager = "^3.5.4"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
