[tool.poetry]
name = "automation-py"
version = "0.1.1"
description = ""
authors = ["ESnark <settimeout1000@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
selenium = "^4.11.2"
webdriver-manager = "^3.5.4"
pandas = "^1.4.2"
pyinstaller = "^5.13.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
